--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Gouvernement UIE | L'Excellece au Service des Étudiants</title>
-    <meta name="description" content="Site officiel du Gouvernement des Étudiants de l'Université Internationale d'Excellence. Découvrez notre vision, nos pôles et notre programme pour 2025-2026." />
-    <meta name="author" content="Gouvernement UIE" />
+<html lang="fr">
 
-    <meta property="og:title" content="Gouvernement UIE 🏛️" />
-    <meta property="og:description" content="Bâtir l'Université de Demain, Aujourd'hui. Vision, Union, Excellence." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>Gouvernement UIE | L'Excellece au Service des Étudiants</title>
+  <meta name="description"
+    content="Site officiel du Gouvernement des Étudiants de l'Université Internationale d'Excellence. Découvrez notre vision, nos pôles et notre programme pour 2025-2026." />
+  <meta name="author" content="Gouvernement UIE" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@GovUIE" />
-    <meta name="twitter:image" content="/og-image.png" />
-  </head>
+  <meta property="og:title" content="Gouvernement UIE 🏛️" />
+  <meta property="og:description" content="Bâtir l'Université de Demain, Aujourd'hui. Vision, Union, Excellence." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/og-image.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@GovUIE" />
+  <meta name="twitter:image" content="/og-image.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
